more test fixes